// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Minimal Layout Logged should render the component 1`] = `
<div
  class="flex flex-col"
>
  <nav
    class="flex flex-wrap bg-gray-800 items-center py-3 px-4"
  >
    <span
      class="flex items-center py-2 no-underline cursor-pointer text-xl text-white font-bold"
    >
      VueJS Tutorial
    </span>
     
    <button
      class="material-icons p-2 text-white mr-2 md:hidden ml-auto border rounded border-white focus:outline-none"
    >
      menu
    </button>
     
    <div
      class="w-full md:inline-flex md:flex-grow md:w-auto pt-4 md:pt-0 hidden"
      id="menu"
    >
      <button
        class="p-2 w-full text-left md:ml-auto md:w-auto md:h-auto text-white rounded hover:border-transparent hover:text-black hover:bg-gray-200 cursor-pointer"
      >
        Sign out
      </button>
    </div>
  </nav>
   
  <div
    class="flex flex-1"
  >
    <router-view-stub />
  </div>
</div>
`;

exports[`Minimal Layout Not logged should render the component 1`] = `
<div
  class="flex flex-col"
>
  <nav
    class="flex flex-wrap bg-gray-800 items-center py-3 px-4"
  >
    <router-link-stub
      ariacurrentvalue="page"
      class="flex items-center py-2 no-underline cursor-pointer text-xl text-white font-bold"
      event="click"
      tag="span"
      to="[object Object]"
    >
      VueJS Tutorial
    </router-link-stub>
     
    <!---->
     
    <!---->
  </nav>
   
  <div
    class="flex flex-1"
  >
    <router-view-stub
      name="default"
    />
  </div>
</div>
`;
